--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "strictNullChecks": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["./src/components/*"],
+      // "@/utils/*": ["./src/utils/*"],
+    },
     "rootDir": ".",
     "jsx": "preserve",
     "jsxFactory": "Taro.createElement",
@@ -22,7 +26,7 @@
     "typeRoots": [
       "node_modules/@types",
       "global.d.ts"
-    ]
+    ],
   },
   "exclude": [
     "node_modules",
